[package]
name = "argon-notary"
description = "The Argon Notary is a service the confirms and rolls-up localchain balance changes."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, features = ["default"] }
futures = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
scale-info = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
subxt = { workspace = true }
tokio = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
tracing = { workspace = true, features = ["default"] }
polkadot-sdk = { workspace = true, features = ["sp-runtime", "sp-core", "sc-utils", "sp-keystore", "binary-merkle-tree", "substrate-prometheus-endpoint"] }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
chrono = { workspace = true }
clap = { workspace = true }
color-backtrace = { workspace = true }

argon-client = { workspace = true }
argon-notary-audit = { workspace = true, features = ["default"] }
argon-primitives = { workspace = true, features = ["default"] }
argon-notary-apis = { workspace = true }

prometheus = { workspace = true }
governor = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

rusoto_core = { workspace = true }
rusoto_s3 = { workspace = true }
rusoto_credential = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = ["frame-support", "sp-keyring"], default-features = true }
argon-testing = { workspace = true }

[build-dependencies]
argon-primitives = { workspace = true, features = ["std"] }
dotenv = { workspace = true }
