[package]
name = "argon-oracle"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
parking_lot = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true, features = ["default"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
reqwest = { workspace = true, features = ["default"] }
scraper = { workspace = true }
hex = { workspace = true }
sp-runtime = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
directories = { workspace = true }
argon-client = { workspace = true }
argon-primitives = { workspace = true, features = ["default", "bitcoin"] }
url = { workspace = true }
ethers = { workspace = true }
uniswap-sdk-core = { workspace = true }
uniswap-v3-sdk = { workspace = true, features = ["extensions"] }
uniswap-lens = { workspace = true }
bitcoincore-rpc = { workspace = true }
bitcoin = { workspace = true }
dotenv = { workspace = true }
lazy_static = { workspace = true }

alloy-primitives = { workspace = true }
alloy-eips = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-provider = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true }
argon-testing = { workspace = true }

[build-dependencies]
argon-primitives = { workspace = true, features = ["std"] }

[features]
simulated-prices = []
