[package]
name = "ulx-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, optional = true }
codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-debug-derive = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-crypto-hashing = { workspace = true }
frame-support-procedural = { workspace = true }
frame-support = { workspace = true }
thiserror = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
napi-derive = { workspace = true, optional = true }
napi = { workspace = true, optional = true }
rsntp = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"bitcoin?/std",
	"clap",
	"codec/derive",
	"codec/std",
	"frame-support-procedural/std",
	"frame-support/std",
	"hex",
	"rsntp",
	"scale-info/derive",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-api/std",
	"sp-application-crypto/full_crypto",
	"sp-application-crypto/std",
	"sp-core/full_crypto",
	"sp-core/std",
	"sp-crypto-hashing/std",
	"sp-debug-derive/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"thiserror",
]
fast-runtime = [ "sp-debug-derive/force-debug" ]
napi = [ "napi-derive/type-def", "napi/napi9", "napi/serde-json" ]
uniffi = [ "dep:uniffi" ]
bitcoin = [ "dep:bitcoin" ]
