[package]
name = "argon-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, optional = true }
codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-arithmetic = { workspace = true }
sc-keystore = { workspace = true, optional = true }
sp-keystore = { workspace = true, optional = true }
sp-debug-derive = { workspace = true }
sp-core = { workspace = true }
sp-crypto-hashing = { workspace = true }
frame-support-procedural = { workspace = true }
frame-support = { workspace = true }
thiserror = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
napi-derive = { workspace = true, optional = true }
napi = { workspace = true, optional = true }
rsntp = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true, default-features = false }
rpassword = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

k256 = { workspace = true, optional = true }
bip32 = { workspace = true, optional = true, features = ["secp256k1"] }
base58 = { workspace = true, optional = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = [ "std" ]
std = [
	"anyhow",
	"anyhow?/std",
	"async-trait",
	"bip32?/std",
	"bitcoin?/std",
	"clap",
	"codec/derive",
	"codec/std",
	"frame-support-procedural/std",
	"frame-support/std",
	"hex",
	"k256?/std",
	"rpassword",
	"rsntp",
	"sc-keystore",
	"scale-info/derive",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-api/std",
	"sp-application-crypto/full_crypto",
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"sp-core/full_crypto",
	"sp-core/std",
	"sp-crypto-hashing/std",
	"sp-debug-derive/force-debug",
	"sp-debug-derive/std",
	"sp-inherents/std",
	"sp-keystore",
	"sp-keystore?/std",
	"sp-runtime/std",
	"thiserror",
]
napi = [ "napi-derive/type-def", "napi/napi9", "napi/serde-json" ]
uniffi = [ "dep:uniffi" ]
bitcoin = [ "base58", "bip32", "dep:bitcoin", "k256" ]
