[package]
name = "argon-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, optional = true }
codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scale-info = { workspace = true }
thiserror = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false, features = ["serde"] }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-debug-derive = { workspace = true, default-features = false }

impl-trait-for-tuples = { workspace = true }
napi-derive = { workspace = true, optional = true }
napi = { workspace = true, optional = true }
rsntp = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true, default-features = false }
rpassword = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

bip32 = { workspace = true, optional = true, features = ["secp256k1"] }
base58 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
polkadot-sdk.workspace = true
polkadot-sdk.features = [
    "sp-runtime",
    "sp-inherents",
    "sp-api",
    "sp-arithmetic",
    "sp-core",
    "sp-crypto-hashing",
    "frame-support-procedural",
    "frame-support",
]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = [ "std" ]
std = [
	"anyhow",
	"anyhow?/std",
	"async-trait",
	"bip32?/std",
	"bitcoin?/std",
	"clap",
	"codec/derive",
	"codec/std",
	"hex",
	"hex?/std",
	"polkadot-sdk/sc-keystore",
	"polkadot-sdk/sp-keystore",
	"polkadot-sdk/std",
	"rpassword",
	"rsntp",
	"scale-info/derive",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-application-crypto/std",
	"sp-debug-derive/force-debug",
	"sp-debug-derive/std",
	"thiserror/std",
	"wasm-bindgen?/std"
]
wasm = [ "wasm-bindgen" ]
napi = [ "napi-derive/type-def", "napi/napi9", "napi/serde-json" ]
uniffi = [ "dep:uniffi" ]
bitcoin = [ "base58", "bip32", "dep:bitcoin" ]
runtime-benchmarks = [ "polkadot-sdk/runtime-benchmarks" ]
