[package]
name = "ulx-node-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
smallvec = { version = "1.11", default-features = false }
log = { version = "0.4.21", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

pallet-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0", features = ["historical"] }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-tx-pause = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", optional = true, branch = "release-polkadot-v1.5.0" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-debug-derive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0", features = ["serde"] }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", optional = true, branch = "release-polkadot-v1.5.0" }
# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", optional = true, branch = "release-polkadot-v1.5.0" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", optional = true, branch = "release-polkadot-v1.5.0" }

# Local Dependencies
pallet-block-seal = { default-features = false, path = "../pallets/block_seal" }
pallet-block-seal-spec = { default-features = false, path = "../pallets/block_seal_spec" }
pallet-block-rewards = { default-features = false, path = "../pallets/block_rewards" }
pallet-bond = { default-features = false, path = "../pallets/bond" }
pallet-chain-transfer = { default-features = false, path = "../pallets/chain_transfer" }
pallet-data-domain = { default-features = false, path = "../pallets/data_domain" }
pallet-mint = { default-features = false, path = "../pallets/mint" }
pallet-notebook = { default-features = false, path = "../pallets/notebook" }
pallet-notaries = { default-features = false, path = "../pallets/notaries" }
pallet-mining-slot = { default-features = false, path = "../pallets/mining_slot" }
pallet-ticks = { default-features = false, path = "../pallets/ticks" }
ulx-primitives = { default-features = false, path = "../primitives" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", optional = true, branch = "release-polkadot-v1.5.0" }

[features]
default = ["std"]
std = [
    "frame-try-runtime?/std",
    "frame-system-benchmarking?/std",
    "frame-benchmarking?/std",
    "codec/std",
    "scale-info/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-session/std",
    "pallet-offences/std",
    "pallet-grandpa/std",
    "pallet-chain-transfer/std",
    "pallet-notaries/std",
    "pallet-ticks/std",
    "pallet-transaction-payment/std",
    "pallet-authorship/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-mining-slot/std",
    "pallet-notebook/std",
    "pallet-bond/std",
    "pallet-block-seal-spec/std",
    "pallet-block-rewards/std",
    "pallet-block-seal/std",
    "pallet-data-domain/std",
    "pallet-mint/std",
    "pallet-tx-pause/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-executive/std",
    "serde_json/std",
    "log/std",
    "sp-api/std",
    "sp-arithmetic/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-consensus-grandpa/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-debug-derive/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
    "ulx-primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-bond/runtime-benchmarks",
    "pallet-block-rewards/runtime-benchmarks",
    "pallet-notaries/runtime-benchmarks",
    "pallet-chain-transfer/runtime-benchmarks",
    "pallet-offences/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-block-seal/runtime-benchmarks",
    "pallet-data-domain/runtime-benchmarks",
    "pallet-mint/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-tx-pause/runtime-benchmarks",
]
try-runtime = [
    "pallet-notaries/try-runtime",
    "pallet-chain-transfer/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-authorship/try-runtime",
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-mint/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-bond/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-block-seal/try-runtime",
    "pallet-data-domain/try-runtime",
    "pallet-block-rewards/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-session/try-runtime",
    "pallet-tx-pause/try-runtime",
]
# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = ["ulx-primitives/fast-runtime", "sp-debug-derive/force-debug"]
