[package]
name = "ulx-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false

[dependencies]
ulixee-client = { workspace = true }
tracing = { workspace = true }
subxt = { workspace = true }
anyhow = { workspace = true, features = ["default"] }
bitcoind = { workspace = true }
bitcoincore-rpc = { workspace = true }
bitcoin = { workspace = true }
lazy_static = { workspace = true }
url = { workspace = true }
env_logger = { workspace = true }
fs2 = { workspace = true }
ulx-notary-apis = { workspace = true }
sp-keyring = { workspace = true }
sp-core = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros", "runtime-tokio-native-tls"] }
rand = { workspace = true }
ulx-primitives = { workspace = true, features = ["fast-runtime", "default"] }
