[package]
name = "ulx-bitcoin-cli"
description = "A cli used to bond bitcoins, create and manage Vaults"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
codec = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }

subxt = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
inquire = { workspace = true }
comfy-table = { workspace = true }
hex = { workspace = true }
base58 = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }

url = { workspace = true, features = [] }

ulixee-client = { workspace = true }
ulx-primitives = { workspace = true, features = ["default"] }
ulx-bitcoin = { workspace = true, features = ["default"] }
ulx-bitcoin-cli-macros = { workspace = true }

[features]
default = []
hwi = [ "ulx-bitcoin/hwi" ]
