[package]
name = "argon-bitcoin-cli"
description = "A cli used to lock bitcoins, create and manage Vaults"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
codec = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }

subxt = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true }

directories = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
comfy-table = { workspace = true }
hex = { workspace = true }
base58 = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }
bip39 = { workspace = true }
age = { workspace = true }

url = { workspace = true, features = [] }

argon-client = { workspace = true }
argon-primitives = { workspace = true, features = ["default"] }
argon-bitcoin = { workspace = true, features = ["default"] }
argon-bitcoin-cli-macros = { workspace = true }
rand = { workspace = true }

[features]
default = []
hwi = [ "argon-bitcoin/hwi" ]
